# calamity-bot

./: .dockerignore  .env.example  .envrc.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  cabal.project  calamity-bot.cabal  docker-compose.yml  flake.nix  goblin_ffmpeg.py  hie.yaml  justfile  package.yaml  prometheus.yml  shell.nix  stack.yaml
.nixpkgs/: calamity-0.2.0.2.nix
app/: Main.hs
db/: schema.sql
db/migrations/: 20200602214607_add_guilds.sql  20200602214609_add_prefixes.sql  20200612224716_add_reminders.sql  20200625014534_add_aliases.sql
src/: CalamityBot.hs  Prelude.hs
src/CalamityBot/: Commands.hs  Db.hs  Pagination.hs  PrefixHandler.hs  Utils.hs
src/CalamityBot/Commands/: Aliases.hs  Crap.hs  Prefix.hs  Reanimate.hs  Reanimate.hs.off  Reminders.hs
src/CalamityBot/Commands/Reanimate/: RenderInMem.hs
src/CalamityBot/Db/: Aliases.hs  Eff.hs  Guilds.hs  Prefixes.hs  Reminders.hs  Schema.hs  Utils.hs
src/CalamityBot/Utils/: Config.hs  Pagination.hs  Process.hs  Reanimate.hs  Utils.hs
src/Polysemy/: Immortal.hs  Prometheus.hs  Timeout.hs
