cabal-version:       2.0
name:                calamity-bot
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/nitros12/calamity-bot
bug-reports:         https://github.com/nitros12/calamity-bot/issues
license:             MIT
license-file:        LICENSE
author:              Ben Simms
maintainer:          ben@bensimms.moe
copyright:           2020 Ben Simms
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/nitros12/calamity-bot.git

library
  hs-source-dirs:      src
  exposed-modules:     CalamityBot
                       Prelude

  build-depends:       base-noprelude ^>= 4.12.0.0
                     , relude

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable calamity-bot
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base-noprelude ^>= 4.12.0.0
                     , calamity-bot
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
