cabal-version:   2.0
name:            calamity-bot
version:         0.0.0
synopsis:        A discord bot
description:     A discord bot
category:        Bots
homepage:        https://github.com/nitros12/calamity-bot
bug-reports:     https://github.com/nitros12/calamity-bot/issues
author:          Ben Simms
maintainer:      ben@bensimms.moe
copyright:       2019 Ben Simms
license:         MIT
license-file:    LICENSE
tested-with:     GHC ==8.10.7
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/nitros12/calamity-bot

library
  exposed-modules:
    CalamityBot
    CalamityBot.Commands
    CalamityBot.Commands.Aliases
    CalamityBot.Commands.Crap
    CalamityBot.Commands.Prefix
    CalamityBot.Commands.Reanimate
    CalamityBot.Commands.Reminders
    CalamityBot.Db
    CalamityBot.Db.Aliases
    CalamityBot.Db.Eff
    CalamityBot.Db.Guilds
    CalamityBot.Db.Prefixes
    CalamityBot.Db.Reminders
    CalamityBot.Db.Schema
    CalamityBot.Db.Utils
    CalamityBot.PrefixHandler
    CalamityBot.Utils.Config
    CalamityBot.Utils.Pagination
    CalamityBot.Utils.Process
    CalamityBot.Utils.Reanimate
    CalamityBot.Utils.Utils
    Polysemy.Immortal
    Polysemy.Timeout

  hs-source-dirs:     src
  default-extensions:
    NoMonomorphismRestriction
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    IncoherentInstances
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -fplugin=Polysemy.Plugin -Wall -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wcompat -Widentities
    -Wredundant-constraints -fhide-source-paths -Wmissing-export-lists
    -Wpartial-fields -fno-warn-unused-do-bind -fno-warn-name-shadowing
    -fno-warn-unused-top-binds -fno-warn-unused-imports

  build-depends:
      arbor-lru-cache
    , base                  >=4.12    && <5
    , beam-core
    , beam-postgres
    , bytestring
    , calamity              ==0.2.0.2
    , calamity-commands
    , data-default-class
    , df1
    , di
    , di-core
    , di-polysemy
    , directory
    , emojis
    , filepath
    , generic-lens
    , hourglass
    , immortal
    , JuicyPixels
    , lens
    , linear
    , megaparsec
    , mime-types
    , polysemy
    , polysemy-plugin       >=0.2
    , postgresql-simple
    , pretty-simple
    , process
    , process-extras
    , reanimate
    , reanimate-svg
    , relude
    , resource-pool
    , table-layout
    , temporary
    , text
    , text-show
    , time
    , unordered-containers
    , wreq

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Unsafe, Relude, Relude.Extra)

  default-language:   Haskell2010

executable calamity-bot
  main-is:            Main.hs
  other-modules:      Paths_calamity_bot
  hs-source-dirs:     app
  default-extensions:
    NoMonomorphismRestriction
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    IncoherentInstances
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -fspecialise-aggressively -flate-specialise
    -fplugin=Polysemy.Plugin -Wall -threaded -rtsopts -with-rtsopts=-N
    -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Widentities -Wredundant-constraints -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields -fno-warn-unused-do-bind
    -fno-warn-name-shadowing -fno-warn-unused-top-binds
    -fno-warn-unused-imports

  build-depends:
      arbor-lru-cache
    , base                  >=4.12    && <5
    , beam-core
    , beam-postgres
    , bytestring
    , calamity              ==0.2.0.2
    , calamity-bot
    , calamity-commands
    , data-default-class
    , df1
    , di
    , di-core
    , di-polysemy
    , directory
    , emojis
    , filepath
    , generic-lens
    , hourglass
    , immortal
    , JuicyPixels
    , lens
    , linear
    , megaparsec
    , mime-types
    , optparse-applicative
    , polysemy
    , polysemy-plugin       >=0.2
    , postgresql-simple
    , pretty-simple
    , process
    , process-extras
    , reanimate
    , reanimate-svg
    , relude
    , resource-pool
    , table-layout
    , temporary
    , text
    , text-show
    , time
    , unordered-containers
    , wreq

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Unsafe, Relude, Relude.Extra)

  default-language:   Haskell2010
