cabal-version:   2.0
name:            calamity-bot
version:         0.0.0
license:         MIT
license-file:    LICENSE
copyright:       2019 Ben Simms
maintainer:      ben@bensimms.moe
author:          Ben Simms
tested-with:     GHC ==8.10.7
homepage:        https://github.com/nitros12/calamity-bot
bug-reports:     https://github.com/nitros12/calamity-bot/issues
synopsis:        A discord bot
description:     A discord bot
category:        Bots
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/nitros12/calamity-bot

library
  exposed-modules:
    CalamityBot
    CalamityBot.Commands
    CalamityBot.Commands.Aliases
    CalamityBot.Commands.Crap
    CalamityBot.Commands.Prefix
    CalamityBot.Commands.Reanimate
    CalamityBot.Commands.Reminders
    CalamityBot.Db
    CalamityBot.Db.Aliases
    CalamityBot.Db.Eff
    CalamityBot.Db.Guilds
    CalamityBot.Db.Prefixes
    CalamityBot.Db.Reminders
    CalamityBot.Db.Schema
    CalamityBot.Db.Utils
    CalamityBot.PrefixHandler
    CalamityBot.Utils.Config
    CalamityBot.Utils.Pagination
    CalamityBot.Utils.Process
    CalamityBot.Utils.Reanimate
    CalamityBot.Utils.Utils
    Polysemy.Immortal
    Polysemy.Timeout
    Polysemy.Prometheus

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoMonomorphismRestriction
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    IncoherentInstances
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -fplugin=Polysemy.Plugin -Wall -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wcompat -Widentities
    -Wredundant-constraints -fhide-source-paths -Wmissing-export-lists
    -Wpartial-fields -fno-warn-unused-do-bind -fno-warn-name-shadowing
    -fno-warn-unused-top-binds -fno-warn-unused-imports

  build-depends:
      arbor-lru-cache          ^>=0.1.1.1
    , aeson                    ^>=2.0
    , base                     >=4.12      && <5
    , beam-core                ^>=0.9.2.1
    , beam-postgres            ^>=0.5.2.1
    , bytestring               ^>=0.10.12.0
    , calamity                 ^>=0.2.0.2
    , calamity-commands        ^>=0.2.0.0
    , data-default-class       ^>=0.1.2.0
    , df1                      ^>=0.4
    , di                       ^>=1.3
    , di-core                  ^>=1.0.4
    , di-polysemy              ^>=0.2.0.0
    , directory                ^>=1.3.6.0
    , emojis                   ^>=0.1.2
    , filepath                 ^>=1.4.2.1
    , generic-lens             ^>=2.2.1.0
    , hgeometry                >=0.11      && <0.13
    , hgeometry-combinatorial  ^>=0.12
    , hourglass                ^>=0.2.12
    , immortal                 ^>=0.3
    , JuicyPixels              ^>=3.3.7
    , lens                     ^>=5.1
    , linear                   ^>=1.21.8
    , megaparsec               ^>=9.2.0
    , mime-types               ^>=0.1.0.9
    , polysemy                 ^>=1.7.1.0
    , polysemy-plugin          >=0.2       && <0.5
    , postgresql-simple        ^>=0.6.4
    , pretty-simple            ^>=4.0.0.0
    , process                  ^>=1.6.13.2
    , process-extras           ^>=0.7.4
    , reanimate                ^>=1.1.5
    , reanimate-svg            ^>=0.13.0
    , relude                   ^>=1.0
    , resource-pool            ^>=0.2.3.2
    , table-layout             ^>=0.9.1.0
    , temporary                ^>=1.3
    , text                     ^>=1.2.4.1
    , text-show                ^>=3.9.6
    , time                     ^>=1.9.3
    , unordered-containers     ^>=0.2.17.0
    , req                      >=3.9.2 && <3.11
    , modern-uri               ^>=0.3
    , prometheus               ^>=2.2.3
    , vector                   ^>=0.12
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Unsafe, Relude, Relude.Extra)

executable calamity-bot
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:
    -O2 -fspecialise-aggressively -flate-specialise
    -Wall -threaded -rtsopts -with-rtsopts=-N
    -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Widentities -Wredundant-constraints -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields -fno-warn-unused-do-bind
    -fno-warn-name-shadowing -fno-warn-unused-top-binds
    -fno-warn-unused-imports
  build-depends:
      base                     >=4.12      && <5
    , calamity-bot
